--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@tailwindcss/postcss": "^4.1.18",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
