--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 backports.zoneinfo==0.2.1
 django==4.2.28
+django-cors-headers==4.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 psycopg2-binary==2.9.10
